# please

./: CMakeLists.txt  README.md  tasks.json
include/: CMakeLists.txt  color.h  config.h  constants.h  please.h  rang.h  style.h  table.h  task.h  term.h  text.h
lib/: CMakeLists.txt  config.cc  config.json  please.cc  run.cc  table.cc  tasks.json
test/: CMakeLists.txt  test.cc
